# becho

./: Cargo.toml  Dockerfile  Makefile  PLANNING.md  README.md
manuals/: becho.1  becho.man
scripts/examples/: colors.sh  core_temperatures.sh  cpu_temperatures.sh  installation_new.sh  installation_old.sh  name_treater.sh  operating_system_startup.sh  paragraph_wrap.sh  paragraphs_wrap.sh  startup.sh
src/: colors.rs  error.rs  io.rs  lib.rs  main.rs  styles.rs  terminal.rs  tests.rs  treatments.rs
