[package]
name = "becho"
version = "1.1.0"
edition = "2021"
authors = ["Sherman Rofeman <skippyr.developer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
convert_case = "0.6.0"
crossterm = "0.26.0"
textwrap = "0.16.0"
